...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/news_feed_setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>


...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Veranstaltungen"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch
                android:id="@+id/sw_veranstaltungen"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Veranstaltungen für Studieninteressierte"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch
                android:id="@+id/sw_veranstaltungen_fur_studieninteressierte"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="News / Pressemitteilungen"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch
                android:id="@+id/sw_news"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Forschung (keine Veranstaltungen)"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch
                android:id="@+id/sw_forschung"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Startseite"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch
                android:id="@+id/sw_startseite"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Schüler"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch
                android:id="@+id/sw_schuler"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
...
                android:layout_height="wrap_content"
                android:text="DE"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch

                android:id="@+id/sw_de"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
...
                android:layout_height="wrap_content"
                android:text="FR"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch

                android:id="@+id/sw_fr"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
...
                android:layout_height="wrap_content"
                android:text="EN"
                android:textColor="@color/bg_bottom_navigation"
                android:textSize="16sp"/>
            <Switch

                android:id="@+id/sw_en"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
...
